--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ html, body {
 	color: #393939;
     margin-left: 15px;
     margin-bottom: 40px;
-	background: #efefef;
+	background: #f6fefe;
 }
 h1{
     text-indent: 0em;
@@ -51,4 +51,3 @@ span.blackback{
     background: #393939;
     color: #b5cde3;
 }
-
