--- a/de12/css/style.css
+++ b/de12/css/style.css
@@ -27,7 +27,7 @@ html, body {
 	color: #393939;
     margin-left: 15px;
     margin-bottom: 40px;
-	background: #efefef;
+	background: #ecf8ff;
 }
 h1{
     text-indent: 0em;
@@ -49,6 +49,6 @@ p{
 span.blackback{
     text-indent: 3em;
     background: #393939;
-    color: #efefef;
+    color: #f5e9e9;
 }
 
